Version 1.0.4 bug fixes: flex item overflow
fixed flex item overflow when resizing viewport height.

--- a/asset/style.css
+++ b/asset/style.css
@@ -1,22 +1,28 @@
+/* global CSS */
+
 html {
-    box-sizing: border-box;
-    display: flex;
-    font-size: 1.1rem;
     font-family: 'Roboto', sans-serif;
 }
 
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   
+}
 
 body{
-    margin: 0;
     width: 100vw;
     height: 100vh;
-    width: 100%;
     background-color: #FFF2CC;
     display: flex;
 }
 
+/* Left container */
+
 .img-container{
-   width: clamp(500px, 35%, 750px);
+   width: 35%;
+   min-height: 645px;
    display: flex;
    object-fit: cover;
    padding: 0;
@@ -26,7 +32,7 @@ img[alt=logo]{
     position: absolute;
     left: 50px;
     top: 50px;
-    width: clamp(50px, 120px, 150px);
+    width: clamp(50px, 10%, 100px);
     height: auto;
 }
 
@@ -37,45 +43,46 @@ img[alt=logo]{
     top: 40px;
 }
 
+/* Right container */
 
- form {
-    width: clamp(500px, 65%, 100vw);
+
+form {
+    width: clamp(400px, 65%, 100vw);
+    min-height: 645px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 60px;
- }
-
-.header {
-    width: 100%;
+    justify-content: center;
+    height: 100vh;
+    gap: 50px;
+    padding: 50px;
 }
 
-.submit-container {
-    width: 100%;
-}
 
- .form-lists{
+.form-lists-container{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    width: 100%;
-    height: 60%;
-  }
+    gap: 1px;
+
+}
 
 .row{
     display: flex;
     align-items: flex-start;
     justify-content: space-evenly;
-
     height: 100%;
     width: 100%;
-    gap: 100px;
+    gap: 3rem;
+    margin: 5px;
+
 }
 
-.row-container {
+.input-container{
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    height: 100%;
+
 }
 
 .input-row{
@@ -89,6 +96,56 @@ img[alt=logo]{
     border-style: none;
     box-shadow: -5px 7px 3px rgba(128, 128, 128, 0.212);
 }
+
+
+.submit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp;
+    gap: 20px;
+}
+
+.checkbox-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+ .check-box {
+    display: flex;
+    gap: 5px;
+    margin-bottom: 10px;
+}
+
+.create-acc-btn {
+    font-size: 1.2rem;
+    width: 350px;
+    height: 66px;
+    border-radius: 15px;
+    flex-shrink: 1;
+    background: #F4B183;    
+    box-shadow: 1px 10px 1px rgba(0, 0, 0, 0.212);
+}
+
+
+input[type=checkbox] {
+    appearance: none;
+    position: relative;
+    width: 0.9em;
+    height: 1em;
+    border: 1px rgb(55, 55, 55) solid;
+    border-radius: 100%;
+    vertical-align: -3px;
+}
+
+input[type=checkbox]:checked {
+    background-color: #3f90f3;
+} 
+
+
+/* pseudo classes */
 
 .input-row:hover{
     background-color: #cdae51;
@@ -121,34 +178,6 @@ img[alt=logo]{
     border: 3px solid #FFD966;
 }
 
-
-.submit-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-ul {
-    list-style-type: none;
-}
-
-li {
-    display: flex;
-    gap: 5px;
-    margin-bottom: 10px;
-}
-
-.create-acc-btn {
-    font-size: 1.2rem;
-    width: 350px;
-    height: 66px;
-    border-radius: 15px;
-    flex-shrink: 1;
-    background: #F4B183;    
-    box-shadow: 1px 10px 1px rgba(0, 0, 0, 0.212);
-}
-
 .create-acc-btn:hover {
     background: #d1976f;
 }
@@ -158,31 +187,16 @@ li {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.212);
 }
 
-input[type=checkbox] {
-    appearance: none;
-    position: relative;
-    width: 0.9em;
-    height: 1em;
-    border: 1px rgb(55, 55, 55) solid;
-    border-radius: 100%;
-    vertical-align: -3px;
-}
-
-input[type=checkbox]:checked {
-    background-color: #3f90f3;
-} 
-
 .err-code{
     font-size: 0.8rem;
     color: red;
 }
 
-@media (max-width: 670px) {
+@media (max-width: 700px) {
 
     html {
         box-sizing: border-box;
-        flex-direction: column;
-        display: flex;
+
         font-size: 1.1rem;
         font-family: 'Roboto', sans-serif;
     }
@@ -198,9 +212,10 @@ input[type=checkbox]:checked {
 
     .img-container{
         width: 100%;
-        height: 300px;
+        height: 35%;
         padding: 0px;
-     }
+        min-height: auto;
+    }
      
      img[alt=logo]{
          position: absolute;
@@ -212,18 +227,20 @@ input[type=checkbox]:checked {
          height: 100%;
          bottom: 600px;
          top: 0px;
-         bottom: 200px;
          object-fit: cover;
      }
      
       form {
-         width: clamp(500px, 65%, 100vw);
+         width: clamp(250px, 65%, 100vw);
+         height: 100%;
+         width: 100%;
          display: flex;
          flex-direction: column;
          justify-content: space-evenly;
          text-align: center;
          align-items: center;
          padding: 0px;
+         min-height: 0;
       }
      
      .header {
@@ -234,12 +251,12 @@ input[type=checkbox]:checked {
          width: 100%;
      }
      
-      .form-lists{
+      .form-lists-container{
          display: flex;
          flex-direction: column;
          justify-content: space-evenly;
          align-items: center;
-         width: 100%;
+         width: 80%;
          height: 60%;
          gap: 10px;
        }
@@ -269,4 +286,12 @@ input[type=checkbox]:checked {
          border-style: none;
          box-shadow: -5px 7px 3px rgba(128, 128, 128, 0.212);
      }
+
+     .submit-container {     
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0 10%;
+    }
 }
